# Core

./: .gitignore  README.md  meson.build
src/CZ/: CZ.h  CZAnimation.cpp  CZAnimation.h  CZBitset.h  CZBooleanEventSource.cpp  CZBooleanEventSource.h  CZCore.cpp  CZCore.h  CZCursorShape.h  CZEdge.h  CZEventSource.cpp  CZEventSource.h  CZInputDevice.h  CZKeyModifiers.h  CZListener.cpp  CZListener.h  CZLog.cpp  CZLog.h  CZLogger.cpp  CZLogger.h  CZObject.cpp  CZObject.h  CZSafeEventQueue.cpp  CZSafeEventQueue.h  CZScopedFd.h  CZSharedMemory.cpp  CZSharedMemory.h  CZSignal.h  CZSpFd.h  CZTime.cpp  CZTime.h  CZTimer.cpp  CZTimer.h  CZTransform.h  CZWeak.cpp  CZWeak.h  CZWindowState.h  Cuarzo.h
src/CZ/Core/: CZAdaptive.h  CZAlignment.h  CZAnimation.cpp  CZAnimation.h  CZAssetManager.h  CZBitset.h  CZBooleanEventSource.cpp  CZBooleanEventSource.h  CZBus.cpp  CZBus.h  CZColorScheme.h  CZCore.cpp  CZCore.h  CZCoreVersion.h.in  CZCursorShape.cpp  CZCursorShape.h  CZEase.cpp  CZEase.h  CZEdge.h  CZEventSource.cpp  CZEventSource.h  CZInputDevice.h  CZKeyModifiers.h  CZKeymap.cpp  CZKeymap.h  CZLayoutChange.h  CZLinearAnimation.cpp  CZLinearAnimation.h  CZListener.cpp  CZListener.h  CZLockGuard.cpp  CZLockGuard.h  CZLog.cpp  CZLog.h  CZLogger.cpp  CZLogger.h  CZObject.cpp  CZObject.h  CZOrientation.h  CZOwn.h  (+19 more)
src/CZ/Core/Events/: CZCloseEvent.h  CZColorSchemeEvent.h  CZDestroyEvent.h  CZEvent.h  CZInputDevicePluggedEvent.h  CZInputDeviceUnpluggedEvent.h  CZInputEvent.h  CZKeyboardEnterEvent.h  CZKeyboardKeyEvent.h  CZKeyboardLeaveEvent.h  CZKeyboardModifiersEvent.h  CZLayoutEvent.h  CZPointerButtonEvent.h  CZPointerEnterEvent.h  CZPointerHoldBeginEvent.h  CZPointerHoldEndEvent.h  CZPointerLeaveEvent.h  CZPointerMoveEvent.h  CZPointerPinchBeginEvent.h  CZPointerPinchEndEvent.h  CZPointerPinchUpdateEvent.h  CZPointerScrollEvent.h  CZPointerSwipeBeginEvent.h  CZPointerSwipeEndEvent.h  CZPointerSwipeUpdateEvent.h  CZPresentationEvent.h  CZTouchCancelEvent.h  CZTouchDownEvent.h  CZTouchFrameEvent.h  CZTouchMoveEvent.h  CZTouchUpEvent.h  CZWindowStateEvent.h
src/CZ/Core/Utils/: CZColorUtils.h  CZMathUtils.h  CZRegionUtils.cpp  CZStringUtils.cpp  CZStringUtils.h
src/CZ/Events/: CZCloseEvent.h  CZDestroyEvent.h  CZEvent.h  CZInputDevicePluggedEvent.h  CZInputDeviceUnpluggedEvent.h  CZInputEvent.h  CZKeyboardEnterEvent.h  CZKeyboardKeyEvent.h  CZKeyboardLeaveEvent.h  CZKeyboardModifiersEvent.h  CZLayoutEvent.h  CZPointerButtonEvent.h  CZPointerEnterEvent.h  CZPointerHoldBeginEvent.h  CZPointerHoldEndEvent.h  CZPointerLeaveEvent.h  CZPointerMoveEvent.h  CZPointerPinchBeginEvent.h  CZPointerPinchEndEvent.h  CZPointerPinchUpdateEvent.h  CZPointerScrollEvent.h  CZPointerSwipeBeginEvent.h  CZPointerSwipeEndEvent.h  CZPointerSwipeUpdateEvent.h  CZPresentationEvent.h  CZTouchCancelEvent.h  CZTouchDownEvent.h  CZTouchFrameEvent.h  CZTouchMoveEvent.h  CZTouchUpEvent.h  CZWindowStateEvent.h
src/CZ/Utils/: CZMathUtils.h  CZRegionUtils.cpp  CZRegionUtils.h  CZSetUtils.h  CZStringUtils.cpp  CZStringUtils.h  CZVectorUtils.h
src/tests/cz-core-timers/: main.cpp  meson.build
